Bug 285878 - search mail - unusable sort by date
Summary: search mail - unusable sort by date
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.99.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-06 09:23 UTC by Ferdinand Gassauer
Modified: 2011-11-07 08:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ferdinand Gassauer 2011-11-06 09:23:07 UTC
Version:           1.99.0 (using KDE 4.7.3) 
OS:                Linux

the sort by date sorts by displayed "name" not by internal "date"



Reproducible: Always

Steps to Reproduce:
click son column header to sort by date

Actual Results:  
sort by name

Expected Results:  
sort by internal date
newest first/last

OS: Linux (x86_64) release 2.6.37.6-0.7-desktop
Compiler: gcc
Comment 1 Laurent Montel 2011-11-06 12:27:34 UTC
Will look at it soon
Comment 2 Laurent Montel 2011-11-07 08:44:48 UTC
Git commit cc8ae455b58b078234f39342bba340ef01a69d71 by Montel Laurent.
Committed on 07/11/2011 at 09:43.
Pushed by mlaurent into branch 'master'.

Fix Bug 285878 - search mail - unusable sort by date

BUG: 285878
FIXED-IN: 4.7.4

M  +2    -0    kmail/CMakeLists.txt
C  +23   -22   kmail/kmsearchfilterproxymodel.cpp [from: kmail/kmsearchmessagemodel.h - 062% similarity]
C  +13   -22   kmail/kmsearchfilterproxymodel.h [from: kmail/kmsearchmessagemodel.h - 067% similarity]
M  +4    -0    kmail/kmsearchmessagemodel.cpp
M  +2    -1    kmail/kmsearchmessagemodel.h
M  +3    -3    kmail/searchwindow.cpp

http://commits.kde.org/kdepim/cc8ae455b58b078234f39342bba340ef01a69d71
Comment 3 Laurent Montel 2011-11-07 08:46:01 UTC
Git commit 06e7c7d9727f545a609ce3bcd4c68c4a65a688ce by Montel Laurent.
Committed on 07/11/2011 at 09:43.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 285878 - search mail - unusable sort by date

BUG: 285878
FIXED-IN: 4.7.4
(cherry picked from commit cc8ae455b58b078234f39342bba340ef01a69d71)

Conflicts:

	kmail/CMakeLists.txt

M  +1    -0    kmail/CMakeLists.txt
C  +23   -22   kmail/kmsearchfilterproxymodel.cpp [from: kmail/kmsearchmessagemodel.h - 062% similarity]
C  +13   -22   kmail/kmsearchfilterproxymodel.h [from: kmail/kmsearchmessagemodel.h - 067% similarity]
M  +4    -0    kmail/kmsearchmessagemodel.cpp
M  +2    -1    kmail/kmsearchmessagemodel.h
M  +3    -3    kmail/searchwindow.cpp

http://commits.kde.org/kdepim/06e7c7d9727f545a609ce3bcd4c68c4a65a688ce