Fix Bug 285878 - search mail - unusable sort by date

BUG: 285878
FIXED-IN: 4.7.4